<resources>
    <string name="app_name">Github Dicoding</string>
    <string name="github_username">github.com/anselmusr</string>
    <string name="github_company">Universitas Amikom Yogyakarta</string>
    <string name="github_location">Yogyakarta, Indonesia</string>
    <string name="github_name">Anselmus Rusdiatmaja</string>
    <string name="search">Search</string>
    <string name="search_hint">Masukkan kata</string>
    <string name="repository">Repository</string>
    <string name="Following">Following</string>
    <string name="Followers">Followers</string>
    <string name="_0000">0000</string>
    <string name="UbahBahasa">Ubah Bahasa</string>
    <string name="aboutme">Tentang Saya</string>
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>
    <string name="empty_favorite">Data Kosong</string>
    <string name="delete_favorite">Hapus Favorite</string>
    <string name="add_favorite">Tambah Favorit</string>
    <string name="Favorite">Favorite</string>
</resources>