<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_pallete1"
    tools:context=".DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_name"
        android:textColor="@color/white"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_detail_photo" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/github_username"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

    <TextView
        android:id="@+id/tv_detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/github_company"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_username" />

    <TextView
        android:id="@+id/tv_detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_location"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_company" />

    <TextView
        android:id="@+id/tv_detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0000"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/repository"
        app:layout_constraintStart_toStartOf="@id/repository"
        app:layout_constraintTop_toBottomOf="@id/repository" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0000"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/following"
        app:layout_constraintStart_toStartOf="@id/following"
        app:layout_constraintTop_toBottomOf="@id/following" />

    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0000"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/follower"
        app:layout_constraintStart_toStartOf="@id/follower"
        app:layout_constraintTop_toBottomOf="@id/follower" />


    <TextView
        android:id="@+id/repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/repository"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/following"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/Following"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/follower"
        app:layout_constraintStart_toEndOf="@id/repository"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

    <TextView
        android:id="@+id/follower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/Followers"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/following"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_location" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="375dp"
        android:background="@color/white" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_pallete2"
        app:layout_constraintBottom_toTopOf="@id/view_pager"
        app:tabTextColor="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/favorite_border" />


</androidx.constraintlayout.widget.ConstraintLayout>